--- a/default.css
+++ b/default.css
@@ -14,6 +14,11 @@ body {
 	margin-top: 2em;
 }
 
+#identity-info {
+	border: solid red 1px;
+	float: right;
+}
+
 #results-info {
 	/*border: solid blue 1px;*/
 }
